tests/baselines/reference/parserES5ComputedPropertyName7.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName7.ts(2,4): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName7.ts(2,5): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName7.ts (2 errors) ====
    class C {
       [e]
       ~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        ~
!!! error TS2304: Cannot find name 'e'.
    }